# Attend2Dispatch

./: .gitignore  README.md  pyproject.toml
configs/: ppo_10x10.yaml  ppo_15x15.yaml  ppo_20x20.yaml  ppo_6x6.yaml
data/: val_dataset_10x10.pt  val_dataset_15x15.pt  val_dataset_20x20.pt  val_dataset_6x6.pt
scripts/: create_val_dataset.py  train.py  train_ppo.py
src/jsp_rl/: encoder.py  env_wrapper.py  rl_model.py  solve_ortools.py  utils.py
sweeps/: sweep_10x10.yaml  sweep_15x15.yaml  sweep_20x20.yaml  sweep_6x6.yaml
