[project]
name = "Attend2Dispatch"
version = "0.1.0"
description = "Attention-based Reinforcement Learning for Job Shop Scheduling"
requires-python = ">=3.10"

dependencies = [
    "torch",
    "numpy",
    "ortools",
    "pyyaml",
    "tqdm",
    "wandb",
    "graph-jsp-env",
    "torch_geometric",
    "gym",
    "jsp_instance_utils
]

[tool.setuptools.packages.find]
where = ["src"]